--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,13 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-// Variables
 @import 'variables';
-// Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~sweetalert2/src/sweetalert2';
+@import 'elements/card';
+@import 'elements/navbar';
+@import 'elements/buttons';
+@import 'elements/transitions';
+// @import '~bootstrap/scss/bootstrap';
+@import "~startbootstrap-sb-admin-2/scss/sb-admin-2";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 @media all and (min-width: 992px) {
     .navbar .nav-item .dropdown-menu {
         display: none;
