--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,10 @@
-@import 'variables';
-@import '~bootstrap/scss/bootstrap';
-@import '~sweetalert2/src/sweetalert2';
-@import 'elements/card';
-@import 'elements/navbar';
-@import 'elements/buttons';
-@import 'elements/transitions';
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~sweetalert2/src/sweetalert2";
+@import "elements/card";
+@import "elements/navbar";
+@import "elements/buttons";
+@import "elements/transitions";
 // @import '~bootstrap/scss/bootstrap';
 @import "~startbootstrap-sb-admin-2/scss/sb-admin-2";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
@@ -12,7 +12,8 @@
     .navbar .nav-item .dropdown-menu {
         display: none;
     }
-    .navbar .nav-item:hover .nav-link {}
+    .navbar .nav-item:hover .nav-link {
+    }
     .navbar .nav-item:hover .dropdown-menu {
         display: block;
     }
@@ -21,5 +22,36 @@
     }
 }
 
+.warp {
+    max-height: 70vh;
+    max-width: 100vw;
+    // padding: 2vw;
+    overflow: scroll;
+    overflow-x: hidden;
+    // border-right: 1px solid gainsboro;
+    // border-left: 1px solid gainsboro;
+    border: 1px solid gainsboro;
+    margin-bottom: 2px;
+}
+.mytable {
+    width: 100%;
+}
 
+.mytable {
+    table,
+    thead,
+    th,
+    td {
+        border: 1px solid black;
+        border-color: black;
+        padding-left: 10px;
+    }
+    thead,
+    th {
+        padding-left: 10px;
+    }
+    // td {
+    //     font-size: 15px;
+    // }
+}
 /* ============ desktop view .end// ============ */
