--- a/resources/sass/print.scss
+++ b/resources/sass/print.scss
@@ -79,7 +79,10 @@ td {
     .meprintTable{
         display: block ;
      }
-    
+     .border-10{
+        border-top: 1px solid black;
+        width: 90%;
+      }
 .notprintTable{
     display: none;
 }
