--- a/resources/sass/print.scss
+++ b/resources/sass/print.scss
@@ -53,6 +53,10 @@ td {
      size: landscape; 
     }
 
+    body{
+        margin: 5px; 
+    }
+
     table,
     th,
     td {
@@ -83,17 +87,24 @@ td {
         border-top: 1px solid black;
         width: 90%;
       }
-.notprintTable{
-    display: none;
-}
-   
+    .notprintTable{
+        display: none;
+    }
+    
      
-    // footer{
-    //     position: fixed;
-    //     height: 150px;
-    //     bottom: 0;
-    //     width: 100%;
-    // }
+    .divFooter {
+    position: fixed;   
+    bottom: 0px;
+    margin: 4px;
+  }
+  .footer {
+  position: fixed;
+  bottom: 0; 
+  width: auto;
+  right: 0;
+  left: 0;
+       
+}
     
 }
 
